Set version and source link for custom build

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -75,3 +75,6 @@ S3_ALIAS_HOST=files.example.com
 # -----------------------
 IP_RETENTION_PERIOD=31556952
 SESSION_RETENTION_PERIOD=31556952
+
+GITHUB_REPOSITORY=cdp1337/mastodon
+MASTODON_VERSION_METADATA=cdp1337
