--- a/.env.vagrant
+++ b/.env.vagrant
@@ -6,3 +6,6 @@ DB_HOST=/var/run/postgresql/
 ES_ENABLED=true
 ES_HOST=localhost
 ES_PORT=9200
+
+GITHUB_REPOSITORY=cdp1337/mastodon
+MASTODON_VERSION_METADATA=cdp1337
