--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,6 @@ NODE_ENV=tests
 # Federation
 LOCAL_DOMAIN=cb6e6126.ngrok.io
 LOCAL_HTTPS=true
+
+GITHUB_REPOSITORY=cdp1337/mastodon
+MASTODON_VERSION_METADATA=cdp1337
